  * Move ppaput.py into new ubuntutools/ directory and remove
    it's shabang.
  * Write a description for the new python-ubuntutools binary
    package in debian/control. Add a "Suggests: ubuntu-dev-tools".
  * Check for reportbug being installed in submittodebian. Replace
    reportbug dependency with a Recommends.
  * Add ppaput to debian/copyright.
  * Remove debian/pycompat.

 -- Siegfried-Angel Gevatter Pujals (RainCT) <rainct@ubuntu.com>  Sun, 17 Feb 2008 22:05:00 +0100

ubuntu-dev-tools (0.26) hardy; urgency=low

  [ Stephan Hermann ]
  * pbuilder-dist: fixed a bug with the *sudo call.
    changed from $SUDOREPLACE "pbuilder" to $SUDOREPLACE -- pbuilder ...

  [ Daniel Hahler ]
  * requestsync:
    * If interaction is required (for an explanation to drop the Ubuntu
      changes), edit the report in the sensible-editor.
      When interaction is not required, ask the user if she wants to edit.
      (LP: #190351)
    * Exit, if versions in Ubuntu and Debian are the same already.

  [ Siegfried-Angel Gevatter Pujals (RainCT) ]
  * Add manpages for update-maintainer and 404main.
  * Move pbuilder-dist.bash_completion into new bash_completion/
    directory and tell dh_install to take care of the stuff there.
  * Let update-maintainer also accept --no-changelog (in addition to
    the current --nochangelog), improve its error messages and change
    the default section to universe.
  * Add AUTHORS section to doc/check-symbols.1, and little changes to
    doc/suspicious-source.1.
  * Fix some issues with the new pbuilder-dist code.

 -- Siegfried-Angel Gevatter Pujals (RainCT) <rainct@ubuntu.com>  Sun, 17 Feb 2008 19:35:46 +0100

ubuntu-dev-tools (0.25) hardy; urgency=low

  [ Michael Bienia ]
  * requestsync:
    + Add work-around for a bug in Debian's madison.php not returning only the
      'source' line (LP: #183346).
    + Add support to file sync requests with python-launchpad-bugs (--lp)
      (LP: #147994).
    + Add line editing during input.