@@ -7,11 +7,5 @@ include /usr/share/cdbs/1/class/python-distutils.mk
 
 DEB_INSTALL_MANPAGES_ubuntu-dev-tools = doc/*.1
 
-build/ubuntu-dev-tools::
-	docbook2x-man doc/ppaput.1.docbook; mv ppaput.1 doc
-
 binary-install/python-ubuntutools::
 	rm -rf debian/python-ubuntutools/usr/lib
-
-clean::
-	rm -f doc/ppaput.1
