@@ -1,145 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
-"http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" [
-]>
-<refentry>
-  <refentryinfo>
-    <author>
-      <firstname>Daniel</firstname>
-      <surname>Holbach</surname>
-      <email>daniel.holbach@ubuntu.com</email>
-    </author>
-    <copyright>
-      <year>2007</year>
-      <holder>Daniel Holbach</holder>
-    </copyright>
-    <!-- XXX IMPORTANT XXX -->
-    <!-- Keep this date up to date: -->
-    <date>2007-09-07</date>
-    <!--  ^^^^^^^^^^ -->
-  </refentryinfo>
-  <refmeta>
-    <refentrytitle>ppaput</refentrytitle>
-    <manvolnum>1</manvolnum>
-  </refmeta>
-  <refnamediv>
-    <refname>ppaput</refname>
-    <refpurpose>A tool for uploading packages for sponsorship</refpurpose>
-  </refnamediv>
-  <refsynopsisdiv>
-    <cmdsynopsis>
-      <command>ppaput</command>
-      <arg choice="opt">
-        <option>-n</option>
-      </arg>
-      <arg choice="opt">
-	<option>&lt;dput location&gt;</option>
-      </arg>
-      <arg choice="opt">
-        <option>&lt;debuild arguments&gt;</option>
-      </arg>
-    </cmdsynopsis>
-  </refsynopsisdiv>
-  <refsect1>
-    <title>PREREQUISITES</title>
-    <para>
-      To use this tool, you will need to set up your PPA in Launchpad and
-      therefore carefully follow the instructions in the <ulink type="http"
-      url="https://help.launchpad.net/PPAQuickStart">PPA documentation</ulink>.
-    </para>
-    <para>
-      Also you need to copy your Launchpad cookie to
-      <filename>~/.lpcookie</filename>. Firefox uses
-      <filename>~/.mozilla/firefox/&lt;random&gt;cookies.txt</filename>,
-      Epiphany uses
-      <filename>~/.gnome2/epiphany/mozilla/epiphany/cookies.txt</filename>.
-    </para>
-  </refsect1>
-  <refsect1>
-    <title>OVERVIEW</title>
-    <para>
-      This tool aims to help with <ulink type="http"
-      url="https://wiki.ubuntu.com/SponsorshipProcess">the sponsoring
-      process</ulink> and is written by the MOTU team.
-    </para>
-    <para>
-      This tool will 1) build a source package of the current source tree
-      you're in, 2) upload the package to &lt;<productname>dput</productname>
-      location&gt; (using 'default' if not specified), 3) follow up on the bug
-      report (if specified in <filename>debian/changelog</filename> as per the
-      <ulink type="http"
-      url="https://wiki.ubuntu.com/ClosingBugsFromChangelog">changelog
-      spec</ulink>), 4) set the right status and subscribe the right people to
-      the bug report.
-    </para>
-    <para>
-      If you use the <option>-n</option> option, it
-      will also 1) file a bug and add 2) a (LP: #.....) header to the source
-      package.
-    </para>
-    <para>
-      <ulink type="http" url="https://wiki.ubuntu.com/SponsorshipProcess">The
-      sponsoring process</ulink> was complicated enough and package uploads
-      were done to either <productname>Malone</productname>,
-      <productname>REVU</productname> or personal web servers. This tool aims
-      to unify processes and make use of existing infrastructure such as
-      <productname>Launchpad Bugs (Malone)</productname> and
-      <productname>Launchpad PPA</productname>.
-      In September 2007, Daniel Holbach started working on this tool.
-    </para>
-  </refsect1>
-  <refsect1>
-    <title>DESCRIPTION</title>
-    <para>
-      This tool has lists of known strings for a given package that
-      it searches for in bug reports (even in the attachments uploaded),
-      thus helping to find duplicates, related bugs and other information,
-      but mainly making bug triagers job a lot easier.
-    </para>
-  </refsect1>
-  <refsect1>
-    <title>OPTIONS</title>
-    <para>
-      These are all the options available so far:
-    </para>
-    <para>
-      <variablelist>
-        <title>ppaput options:</title>
-        <varlistentry>
-          <term><option>-n</option></term>    
-          <listitem><para>files a new bug report and adds its number to
-	  <filename>debian/changelog</filename>
-          </para></listitem> 
-        </varlistentry>
-         <varlistentry>
-          <term><option>&lt;dput location&gt;</option></term>
-          <listitem><para>specifies the location you upload the source package
-	  to according to the alias you specified in either
-	  <filename>/etc/dput.cf</filename> or
-	  <filename>~/.dput.cf</filename></para></listitem>
-        </varlistentry>
-        <varlistentry>
-          <term><option>&lt;debuild arguments&gt;</option></term>
-          <listitem><para>will be passed to <productname>debuild</productname>
-	  during source package creation
-	  </para></listitem>
-        </varlistentry>
-  </variablelist>
-    </para>
-  </refsect1>
-  <refsect1>
-    <title>COPYRIGHT</title>
-    <para>
-      This manual page was written by the MOTU team for the 
-      <productname>revutool</productname> bug tracking system.
-      Permission is granted to copy, distribute and/or modify this document
-      under the terms of the <acronym>GNU</acronym> General Public License,
-      Version 3 or any later version published by the Free Software Foundation.
-    </para>
-    <para>
-      On Debian systems (like Ubuntu), the complete text of the
-      GNU General Public License can be found in
-      <filename>/usr/share/common-licenses/GPL-3</filename>.
-    </para>
-  </refsect1>
-</refentry>
