@@ -25,7 +25,6 @@ setup(name='ubuntu-dev-tools',
                'pull-debian-debdiff',
                'what-patch',
                'suspicious-source',
-               'ppaput',
                'requestsync',
                'hugdaylist',
                'massfile',
